Added table footer labels

--- a/registracija.html
+++ b/registracija.html
@@ -359,7 +359,7 @@ registrujete se putem obrasca u nastavku.</b>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Feature 1</td>
+                                    <td>Dnevni Newsletter Akta</td>
                                     <td><b class="check">✔</b></td>
                                     <td><b class="check">✔</b></td>
                                     <td><b class="check">✔</b></td>
@@ -368,7 +368,7 @@ registrujete se putem obrasca u nastavku.</b>
                                     <td><b class="check">✔</b></td>
                                 </tr>
                                 <tr>
-                                    <td>Feature 2</td>
+                                    <td>Akta Promo Newsletter</td>
                                     <td>&mdash;</td>
                                     <td><b class="check">✔</b></td>
                                     <td><b class="check">✔</b></td>
@@ -377,7 +377,7 @@ registrujete se putem obrasca u nastavku.</b>
                                     <td><b class="check">✔</b></td>
                                 </tr>
                                 <tr>
-                                    <td>Feature 3</td>
+                                    <td>Dnevni Newsletter Akta - Dodjele ugovora</td>
                                     <td>&mdash;</td>
                                     <td>&mdash;</td>
                                     <td><b class="check">✔</b></td>
@@ -386,7 +386,155 @@ registrujete se putem obrasca u nastavku.</b>
                                     <td><b class="check">✔</b></td>
                                 </tr>
                                 <tr>
-                                    <td>Feature 4</td>
+                                    <td>Moj profil - Akta / Prilagođavanje profila</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Banner 7 dana</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Objavljeni Tenderi/ Pregled tendera
+                                    </td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Javne nabavke</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Licitacije</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Javni pozivi</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Dodjele ugovora</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Planovi nabavki</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Regulacioni planovi</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Stečajevi i likvidacije</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Objave tendera/Oglasa</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Registar kompanija i institucija/ Osnovni profil kompanije
+                                    </td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Finansijski pokazatelji za kompanije
+                                    </td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Objave PR tekstova</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Objave seminara, kataloga, ponuda, oglasa</td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Objava oglasa u Akta promo newsletteru
+                                    </td>
+                                    <td>&mdash;</td>
+                                    <td>&mdash;</td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                    <td><b class="check">✔</b></td>
+                                </tr>
+                                <tr>
+                                    <td>Najave događaj</td>
                                     <td>&mdash;</td>
                                     <td>&mdash;</td>
                                     <td><b class="check">✔</b></td>
@@ -395,6 +543,18 @@ registrujete se putem obrasca u nastavku.</b>
                                     <td><b class="check">✔</b></td>
                                 </tr>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td></td>
+
+                                    <td class="tenderi-labela">&nbsp;</td>
+                                    <td class="registar-labela">&nbsp;</td>
+                                    <td class="promo-labela">&nbsp;</td>
+                                    <td class="registarplus-labela">&nbsp;</td>
+                                    <td class="primarni-labela">&nbsp;</td>
+                                    <td class="premium-labela">&nbsp;</td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
                 </div>
