Replaced font of features label cells

--- a/registracija.html
+++ b/registracija.html
@@ -534,7 +534,7 @@ registrujete se putem obrasca u nastavku.</b>
                                     <td><b class="check">✔</b></td>
                                 </tr>
                                 <tr>
-                                    <td>Najave događaj</td>
+                                    <td>Najave događaja</td>
                                     <td>&mdash;</td>
                                     <td>&mdash;</td>
                                     <td><b class="check">✔</b></td>
